--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A dashboard for visualizing data from air quality sensors.",
   "scripts": {
     "start": "esbuild ./main.ts --bundle --outfile=static/main.js --servedir=static --format=esm",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esbuild ./main.ts --bundle --outfile=static/main.js --format=esm"
   },
   "author": "Viam Docs Team",
   "license": "ISC",
@@ -11,7 +11,8 @@
     "esbuild": "*"
   },
   "dependencies": {
-    "@viamrobotics/sdk": "^0.13.0",
-    "bson": "^6.6.0"
+    "@viamrobotics/sdk": "^0.42.0",
+    "bson": "^6.6.0",
+    "js-cookie": "^3.0.5"
   }
 }
