--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "esbuild": "*"
   },
   "dependencies": {
-    "@viamrobotics/sdk": "^0.42.0",
+    "@viamrobotics/sdk": "^0.46.1-b.0",
     "bson": "^6.6.0",
     "js-cookie": "^3.0.5"
   }
